<resources>
    <string name="app_name">1P FaceMatch</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="a_6_digit_verification_code_will_be_sent_via_sms">A 6-digit verification code will be sent via SMS</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_91">+91</string>
    <string name="_9876543210">9876543210</string>
    <string name="by_continuing_you_agree_to_our">By continuing you agree to our</string>
    <string name="terms_amp_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="send_otp">Send OTP</string>
    <string name="please_enter_a_valid_number">Please enter a valid number.</string>
    <string name="enter_the_code_we_sent_you">Enter the code we sent you</string>
    <string name="sent_to">Sent to</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_otp_in">Resend otp in</string>
    <string name="verify">Verify</string>
    <string name="app_shared_preferences">AppSharedPreferences</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="guests">Guests</string>
    <string name="booking_details">Booking Details</string>
    <string name="booking_id">Booking ID</string>
    <string name="booking_for">Booking For</string>
    <string name="number_of_guests">Number of\nGuests</string>
    <string name="booking_date">Booking Date</string>
    <string name="guest_verification">Guest Verification</string>
    <string name="please_grant_camera_permission_to_continue">Please grant camera permission to continue!</string>
    <string name="error_while_creating_image">Error while creating image!</string>
    <string name="enter_your_details_to_continue">Enter your details to continue</string>
    <string name="please_enter_your_user_id_and_password_to_proceed">Please enter your User ID and password to proceed</string>
    <string name="user_id">User Id</string>
    <string name="abc_xyz_com">abc@xyz.com</string>
    <string name="password">Password</string>
    <string name="_continue">Continue</string>
    <string name="_pass">****</string>
    <string name="please_enter_a_valid_user_id">Please enter a valid User ID!</string>
    <string name="please_enter_a_valid_password">Please enter a valid password!</string>
    <string name="invalid_credentials">Invalid credentials!</string>
    <string name="filter">Filter</string>
    <string name="error_fetching_details">Error fetching details!</string>
    <string name="capture_images">Capture Images</string>
    <string name="error_capturing_image">Error capturing image!</string>
    <string name="error_while_image_verification">Error while image verification!</string>
    <string name="verification_successful">Verification Successful!</string>
    <string name="close">Close</string>
    <string name="verification_failed">Verification Failed!</string>
    <string name="location_turn_on">Please turn on location to perform this activity!</string>
    <string name="okay">Okay</string>
    <string name="please_enable_location_permission">Please enable location permission!</string>
    <string name="please_enable_camera_permission">Please enable camera permission!</string>
    <string name="no_location_available">No location available</string>
    <string name="face_does_not_match">Face does not match!</string>
    <string name="logout">Logout</string>
    <string name="your_session_has_expired_please_login_again">Your session has expired. Please login again.</string>
    <string name="scan">Scan</string>
    <string name="no_pending_guests_found">No pending guests found!</string>
    <string name="guest_list">Guest List</string>
    <string name="search_by_name_or_phone">Search by name or phone...</string>
    <string name="place_the_qr_in_the_center_to_scan">Place the QR in the center to scan.</string>
</resources>