<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LargeTitle"
        android:text="@string/enter_your_details_to_continue" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextRegular"
        android:text="@string/please_enter_your_user_id_and_password_to_proceed" />


    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextSmall"
        android:text="@string/user_id" />

    <LinearLayout
        android:background="@drawable/bg_grey_8dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_user_id"
            android:inputType="textEmailAddress"
            style="@style/TextMediumBlack"
            android:background="@null"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/abc_xyz_com"/>


    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextSmall"
        android:text="@string/password" />

    <LinearLayout
        android:background="@drawable/bg_grey_8dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:drawableRight="@drawable/ic_show_password"
            android:id="@+id/et_password"
            android:maxLength="10"
            android:inputType="textPassword"
            style="@style/TextMediumBlack"
            android:background="@null"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/_pass"/>


    </LinearLayout>

    <Space
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"/>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

       <LinearLayout
           android:gravity="center"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/TextSmall"
               android:text="@string/by_continuing_you_agree_to_our"/>

           <TextView
               android:layout_marginLeft="5dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/TextSmall"
               android:text="@string/terms_amp_conditions"/>

       </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:visibility="gone"
                android:id="@+id/progress"
                style="@style/Loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_marginBottom="2dp"
                style="@style/ButtonTheme"
                android:text="@string/_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>